--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ header{
 .main_section{
     width: 1440px;
     background-color: #D4F3F0;
+    margin: auto;
 }
 
 .section_second{
@@ -128,7 +129,6 @@ article{
     line-height: 36px;
     letter-spacing: 0.005em;
     text-align: justify;
-
 }
 
 /* Footer  */
@@ -158,8 +158,7 @@ footer{
     display: inline-block;
     margin: auto;
     width: 16px;
-    height: 18px;
-    
+    height: 18px;  
 }
 
 .footer_img{
